Version 0.9.1 -

- Adjust overlap detection handling